--- a/.github/workflows/execution-flow.yml
+++ b/.github/workflows/execution-flow.yml
@@ -1,6 +1,8 @@
 name: Website Deployment
 on:
-  workflow_dispatch:
+  push:
+     branches:
+      - master
 jobs:
   lint:
     runs-on: ubuntu-latest
