--- a/.github/workflows/execution-flow.yml
+++ b/.github/workflows/execution-flow.yml
@@ -1,8 +1,6 @@
 name: Website Deployment
 on:
-  push:
-     branches:
-      - master
+  workflow_dispatch:
 jobs:
   lint:
     runs-on: ubuntu-latest
