--- a/.github/workflows/martix.yml
+++ b/.github/workflows/martix.yml
@@ -7,6 +7,14 @@ jobs:
       matrix:
         node-version: [12, 14, 16]
         operating-system: [ubuntu-latest, windows-latest]
+        incude:
+          - node-version: 18
+            operating-system: ubuntu-latest
+          - node-version: 19
+            operating-system: windows-latest
+        exclude:
+          - node-version: 12
+            operating-system: windows-latest
     runs-on: ${{ matrix.operating-system }} 
     steps:
       - name: get code
