--- a/.github/workflows/reusable.yml
+++ b/.github/workflows/reusable.yml
@@ -1,8 +1,21 @@
 name: reusable deploy
-on: workflow_call
+on: 
+  workflow_call:
+    inputs:
+      artifact-name:
+        description: The name of deployable artifact files
+        required: false
+        default: dist
+        type: string
 jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
+      - name: get code
+        uses: actions/download-artifact@v3
+        with:
+          name: ${{ inputs.artifact-name }}
+      - name: list files
+        run: ls
       - name: output info
         run: echo "deploying & uploading...."
