added vlaue to reuseable workflow

--- a/.github/workflows/reusable.yml
+++ b/.github/workflows/reusable.yml
@@ -5,7 +5,7 @@ on:
       artifact-name:
         description: The name of deployable artifact files
         required: false
-        default: dist-files
+        default: dist
         type: string
 jobs:
   deploy:
